--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Griffy&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -29,16 +29,20 @@ html {
   color: #1d2238;
   background-color: #18dcff;
 }
-
+.griffy-regular {
+  font-family: "Griffy", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 .shadow-bottom {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
-.qq {
-  background: rgb(0,0,0);
-  background: linear-gradient(360deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.599921218487395) 60%, rgba(0,0,0,0) 100%);
-}
-
 .list-cardcomics-pro {
   @apply pt-10 grid grid-cols-1 xs:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 min-[1224px]:grid-cols-5 gap-4;
 }
+
+.text-shadow {
+  text-shadow: 1px 1px 2px #992c1b;
+}
+
