--- a/src/components/Header/NavBar/MenuItem/MenuItem.css
+++ b/src/components/Header/NavBar/MenuItem/MenuItem.css
@@ -1,5 +1,8 @@
 .menu-item {
-  @apply py-2 px-3;
+  @apply py-2 px-3 hover:text-cmu-primary-500;
+  &:hover {
+    text-shadow: 0 0 2px #fcb1a5;
+  }
 }
 .menu-item.active {
   @apply bg-cmu-primary-500 text-white rounded-xl;
