--- a/src/components/Header/NavBar/MenuItem/MenuItem.css
+++ b/src/components/Header/NavBar/MenuItem/MenuItem.css
@@ -1,9 +1,9 @@
 .menu-item {
-  @apply py-2 px-3 hover:text-cmu-primary-500;
+  @apply py-4 px-3 md:py-2 hover:text-cmu-primary-500 md:w-max w-full text-center md:border-none border-b border-gray-300 dark:border-[#262626];
   &:hover {
     text-shadow: 0 0 2px #fcb1a5;
   }
 }
 .menu-item.active {
-  @apply bg-cmu-primary-500 text-white rounded-xl;
+  @apply bg-cmu-primary-500 text-white rounded-none md:rounded-xl;
 }
