--- a/src/pages/Home/HeroesBaner/MagicImage/MagicImage.css
+++ b/src/pages/Home/HeroesBaner/MagicImage/MagicImage.css
@@ -4,6 +4,9 @@
 }
 .image-cover img {
   height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: top center;
   --rotateY: 0deg;
   --rotateX: 0deg;
   transform: perspective(1200px) rotateY(var(--rotateY)) rotateX(var(--rotateX));
